--- a/package.xml
+++ b/package.xml
@@ -61,6 +61,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>nmea_msgs</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>image_transport</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -72,7 +73,7 @@
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>message_filters</exec_depend>
-
+  <exec_depend>image_transport</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
