feat: add message handler and image detector
1) dji_vehicle_node.h: move VehicleWrapper to protected scope
so that it can be assessed by ISULVehicleNode
2) add two classes, MessageHandler and ImageDetector.
MessageHandler handles subscriptions and publications of msgs
or srvs
3) put common types into iusl_common_type.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,16 @@ add_service_files(
   SetupCameraStream.srv
 )
 
+# iusl: extended msg and srv
+add_message_files(
+  FILES
+  ../src/iusl_uav/msg/iuslDetectionResult.msg
+)
+add_service_files (
+    FILES
+    ../src/iusl_uav/srv/iuslSetRtkEnable.srv 
+)
+
 ## Generate actions in the 'action' folder
 # add_action_files(
 #   FILES
